tests/snapshots/examples_fixtures/primop__higher_order_fastcall.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/primop/higher_order_fastcall.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/higher_order_fastcall.flx:1:1
  |
1 | print("== OpCallBase fastcall candidates ==");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/primop/higher_order_fastcall.flx:1:1
  |
1 | print("== OpCallBase fastcall candidates ==");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | ---------------------------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/higher_order_fastcall.flx:9:1
  |
9 | print(to_array(mapped));
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  | ------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/higher_order_fastcall.flx:10:1
   |
10 | print(to_array(filtered));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/higher_order_fastcall.flx:11:1
   |
11 | print(total);
   | ^^^^^^^^^^^^^
   | ------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/higher_order_fastcall.flx:14:1
   |
14 | print(to_array(expanded));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/higher_order_fastcall.flx:16:1
   |
16 | print(any(xs, fn(x) { x == 4 }));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/higher_order_fastcall.flx:17:1
   |
17 | print(all(xs, fn(x) { x > 0 }));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/higher_order_fastcall.flx:18:1
   |
18 | print(find(xs, fn(x) { x == 3 }));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/higher_order_fastcall.flx:19:1
   |
19 | print(count(xs, fn(x) { x % 2 == 0 }));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/primop/higher_order_fastcall.flx:22:1
   |
22 | print(sorted);
   | ^^^^^^^^^^^^^^
   | -------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 11 errors.
== stdout ==
<not executed>
